[gd_scene load_steps=5 format=2]

[ext_resource path="res://CoolLine_Max11/script/optionMenu.gd" type="Script" id=1]
[ext_resource path="res://CoolLine_Max11/img/gui_option_menu.jpg" type="Texture" id=2]
[ext_resource path="res://CoolLine_Max11/img/off_btn.png" type="Texture" id=3]
[ext_resource path="res://CoolLine_Max11/img/on_btn.png" type="Texture" id=4]

[node name="optionMenu" type="Node"]
script = ExtResource( 1 )

[node name="optionMenu_panel" type="TextureRect" parent="."]
margin_right = 504.0
margin_bottom = 895.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="optionDetailPanel" type="TextureRect" parent="optionMenu_panel"]
margin_left = 9.0
margin_top = 151.0
margin_right = 495.0
margin_bottom = 558.0
__meta__ = {
"_edit_lock_": true
}

[node name="music_check" type="CheckButton" parent="optionMenu_panel/optionDetailPanel"]
margin_left = 266.0
margin_top = 134.0
margin_right = 382.0
margin_bottom = 191.0
custom_icons/off = ExtResource( 3 )
custom_icons/on = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="sfx_check" type="CheckButton" parent="optionMenu_panel/optionDetailPanel"]
margin_left = 267.0
margin_top = 220.0
margin_right = 383.0
margin_bottom = 277.0
custom_icons/off = ExtResource( 3 )
custom_icons/on = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="backButton" type="TextureButton" parent="optionMenu_panel"]
margin_left = 435.0
margin_top = 171.0
margin_right = 497.0
margin_bottom = 230.0
__meta__ = {
"_edit_lock_": true
}
